# MP620-630-Linux-Printer

./: README.rst  changelog.txt  install.sh
bjnp/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  bjnp  bjnp-debug.c  bjnp-io.c  bjnp-runloop.c  bjnp.c  bjnp.h  config.h  config.h.in  config.status  configure  configure.ac  cups-bjnp.spec
bjnp/conf/: norpm  rpmbuild
cups-bjnp-1.2.1/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  bjnp-commands.c  bjnp-debug.c  bjnp-discover.c  bjnp-io.c  bjnp-protocol.h  bjnp-runloop.c  bjnp-utils.c  bjnp.c  bjnp.h  config.h.in  configure  configure.ac  cups-bjnp.spec
debs/: cnijfilter-common_3.00-1_all.deb  cnijfilter-ip1800series_2.70-universal.deb  cnijfilter-mp630series_3.00-1_all.deb  cups-bjnp_1.0-1.all.deb  cups-bjnp_1.0-1_amd64.deb  scangearmp-common_1.20-1_all.deb  scangearmp-mp630series_1.20-1_all.deb
dummy/: libcupsys2_1.3.9-17ubuntu3.9_all.deb
ppd/: canonip1800_Universal.ppd  canonmp620-630_Universal.ppd
